# custom-memory-allocator

./: .gitignore  CMakeLists.txt  library.h
benchmarks/: CMakeLists.txt  bench_linear_allocator.cpp  bench_pool_allocator.cpp  benchmark.cpp
include/: linear_allocator.hpp  pool_allocator.hpp  utils.hpp
tests/: CMakeLists.txt  test.cpp  test_linear_allocator.cpp  test_pool_allocator.cpp  test_utils.cpp
